# raytracer

./: .gitignore  Cargo.toml  README.md
src/: aabb.rs  alias.rs  cam.rs  hittable.rs  hittablelist.rs  main.rs  material.rs  pdf.rs  ray.rs  scenes.rs  sphere.rs  texture.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs
