[package]
name = "raytracer"
version = "0.1.0"
authors = ["dr-BEat <dr-BEat@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
image = "0.23.12"
vecmat = "0.4.2"
rand = "0.7.3"
rayon = "1.5"

[dev-dependencies]
proptest = "0.10.1"
test-case = "1.0.0"